--- a/detail.html
+++ b/detail.html
@@ -100,16 +100,16 @@ const specs = {
   "Tenda Camping": { category:"Hobi", price:60000, img:"assets/img/Tenda.png", spesifikasi: {"Kapasitas":"2-4 orang","Bahan":"Tahan air","Ukuran":"200x200x120 cm","Kondisi":"Baik"} },
   "Set Padel": { category:"Hobi", price:40000, img:"assets/img/Padel.png", spesifikasi: {"Isi":"2 raket, 3 bola","Merek":"Generic","Kondisi":"Baik"} },
   "Ranjang Bayi": { category:"Furnitur", price:45000, img:"assets/img/BC.png", spesifikasi: {"Ukuran":"120x60 cm","Bahan":"Kayu lapis","Fitur":"Bisa dirakit","Kondisi":"Baik"} },
-  "Biola": { category:"Musik", price:75000, img:"assets/img/Biola.png", spesifikasi: {"Ukuran":"4/4","Bahan":"Kayu spruce & maple","Termasuk":"Busur & kasing","Kondisi":"Baik"} },
-  "Cello": { category:"Musik", price:120000, img:"assets/img/Cello.png", spesifikasi: {"Ukuran":"4/4","Bahan":"Kayu solid","Termasuk":"Kursi & busur","Kondisi":"Baik"} },
-  "Gitar Elektrik": { category:"Musik", price:90000, img:"assets/img/Gitar Elektrik.png", spesifikasi: {"Merek":"Fender/Generic","Tipe":"Solid-body","Termasuk":"Kabel, strap","Kondisi":"Baik"} },
+  "Biola": { category:"Hobi", price:75000, img:"assets/img/Biola.png", spesifikasi: {"Ukuran":"4/4","Bahan":"Kayu spruce & maple","Termasuk":"Busur & kasing","Kondisi":"Baik"} },
+  "Cello": { category:"Hobi", price:120000, img:"assets/img/Cello.png", spesifikasi: {"Ukuran":"4/4","Bahan":"Kayu solid","Termasuk":"Kursi & busur","Kondisi":"Baik"} },
+  "Gitar Elektrik": { category:"Hobi", price:90000, img:"assets/img/Gitar Elektrik.png", spesifikasi: {"Merek":"Fender/Generic","Tipe":"Solid-body","Termasuk":"Kabel, strap","Kondisi":"Baik"} },
   "Teleskop": { category:"Hobi", price:110000, img:"assets/img/Teleskop.png", spesifikasi: {"Tipe":"Reflector","Aperture":"114 mm","Mount":"Alt-Az tripod","Termasuk":"Okuler 25mm & 10mm","Kondisi":"Baik"} },
   "Air Fryer": { category:"Furnitur", price:50000, img:"assets/img/Air Fyer.png", spesifikasi: {"Kapasitas":"3.5 L","Daya":"1500W","Fitur":"Timer, temperatur adjustable","Kondisi":"Baik"} },
   "Griller": { category:"Furnitur", price:45000, img:"assets/img/Griller.png", spesifikasi: {"Tipe":"Electric griller","Daya":"2000W","Ukuran":"Medium","Kondisi":"Baik"} },
   "Oven": { category:"Furnitur", price:70000, img:"assets/img/Oven.png", spesifikasi: {"Tipe":"Countertop oven","Kapasitas":"20 L","Daya":"1500W","Fitur":"Convection","Kondisi":"Baik"} },
   "Kipas Angin": { category:"Elektronik", price:20000, img:"assets/img/Kipas Angin.png", spesifikasi: {"Tipe":"Tower/meja","Kecepatan":"3-level","Daya":"50-60W","Kondisi":"Baik"} },
   "Printer": { category:"Elektronik", price:60000, img:"assets/img/Printer.png", spesifikasi: {"Tipe":"Inkjet/Laser","Fitur":"Print, scan, copy","Konektivitas":"USB/Wi-Fi","Kondisi":"Baik"} },
-  "DJ Controller": { category:"Musik", price:130000, img:"assets/img/DJ Controller.png", spesifikasi: {"Merek":"Pioneer/Numark","Fitur":"Mixer, jog wheels, pads","Konektivitas":"USB","Kondisi":"Baik"} },
+  "DJ Controller": { category:"Hobi", price:130000, img:"assets/img/DJ Controller.png", spesifikasi: {"Merek":"Pioneer/Numark","Fitur":"Mixer, jog wheels, pads","Konektivitas":"USB","Kondisi":"Baik"} },
   "Set Alat Golf": { category:"Hobi", price:150000, img:"assets/img/Set Alat Golf.png", spesifikasi: {"Isi":"Driver, iron set, putter, tas","Merek":"Generic","Kondisi":"Baik"} }
 };
 
